hphp/hack/test/typecheck/new_inference/lambda_identity.php.like_types.exp
File "lambda_identity.php", line 24, characters 20-21:
Invalid argument (Typing[4110])
File "lambda_identity.php", line 4, characters 23-24:
Some type constraint(s) are violated here
File "lambda_identity.php", line 4, characters 23-24:
T1 is a constrained type parameter
File "lambda_identity.php", line 7, characters 25-32:
Expected arraykey
File "lambda_identity.php", line 4, characters 23-24:
But got dynamic
File "lambda_identity.php", line 25, characters 20-21:
Invalid argument (Typing[4110])
File "lambda_identity.php", line 4, characters 23-24:
Some type constraint(s) are violated here
File "lambda_identity.php", line 4, characters 23-24:
T1 is a constrained type parameter
File "lambda_identity.php", line 7, characters 25-32:
Expected arraykey
File "lambda_identity.php", line 4, characters 23-24:
But got dynamic
File "lambda_identity.php", line 26, characters 12-13:
Invalid return type (Typing[4110])
File "lambda_identity.php", line 8, characters 26-54:
Expected ~(function(arraykey): arraykey) because it is an unenforceable type
File "lambda_identity.php", line 4, characters 52-68:
But got (function([unresolved]): ~[unresolved])
